Resolves: tdf#100463 tolerence in contour editor doesn't work

probably since

commit f51f03a46102333bac6a7fe06bc8538492f413a5
Author: Stephan Bergmann <sbergman@redhat.com>
Date:   Wed Mar 5 12:24:14 2014 +0100

    Do not needlessly truncate MinMax argument before comparison with bounds

Change-Id: I5c92f0af3e05ad68ed88fa860b36e8426e160bf9
(cherry picked from commit d5bd18ecac5806b7b4e39a1919b6b56df0f94ce3)
Reviewed-on: https://gerrit.libreoffice.org/27102
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan Holesovsky <kendy@collabora.com>